--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <input type="password" id="password2" placeholder="Confirm Password">
                 <small>Error message</small>                
             </div>
+
+            <button type="submit">Submit</button>
         </form>
     </div>
     <script src="script.js"></script>
